# Termad

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml
examples/: demo_claude_code.py  demo_cli.py  demo_open_claw.py
termad/termad/: __init__.py  ad.py  monitor.py  renderer.py
termad/termad/assets/: dvd_ad.json  mcd_night_ad.json  open_claw_macmini_ad.json
tests/: test_ad.py  test_api.py  test_monitor.py  test_renderer.py
